GCP/k8s/nginx/minio-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-external
  namespace: api
spec:
  type: ExternalName
  externalName: minio-service.storage.svc.cluster.local
  ports:
    - port: 9000
