GCP/k8s/nginx/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-public
  namespace: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/limit-rps: "10"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - storage.t1gs.com
      secretName: api-tls-cert
  rules:
    - host: storage.t1gs.com
      http:
        paths:
          - path: /auth/login
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
