GCP/k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt   # or selfsigned for dev
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy-service.nginx.svc.cluster.local:4180/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
    nginx.ingress.kubernetes.io/limit-rps: "10"   # rate limiting
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - storage.t1gs.com
      secretName: api-tls-cert   # cert-manager will populate this automatically
  rules:
    - host: storage.t1gs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
